modify: 미션 생성 로직 수정